@@ -31,6 +31,8 @@ import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLParameters;
 
 import jakarta.annotation.Nonnull;
+import lombok.Getter;
+import lombok.Setter;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpHost;
 import org.apache.http.HttpResponse;
@@ -76,9 +78,9 @@ import org.frankframework.encryption.KeystoreType;
 import org.frankframework.http.authentication.AuthenticationScheme;
 import org.frankframework.http.authentication.HttpAuthenticationException;
 import org.frankframework.http.authentication.OAuthAccessTokenManager;
+import org.frankframework.http.authentication.OAuthAccessTokenManager.AuthenticationType;
 import org.frankframework.http.authentication.OAuthAuthenticationScheme;
 import org.frankframework.http.authentication.OAuthPreferringAuthenticationStrategy;
-import org.frankframework.http.authentication.OAuthAccessTokenManager.AuthenticationType;
 import org.frankframework.lifecycle.ConfigurableLifecycle;
 import org.frankframework.util.ClassUtils;
 import org.frankframework.util.CredentialFactory;
@@ -86,9 +88,6 @@ import org.frankframework.util.LogUtil;
 import org.frankframework.util.StringUtil;
 import org.springframework.context.ApplicationContext;
 import org.springframework.util.Assert;
-
-import lombok.Getter;
-import lombok.Setter;
 
 /**
  * <p>
@@ -145,7 +144,7 @@ import lombok.Setter;
 public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeystore, HasTruststore {
 	protected final Logger log = LogUtil.getLogger(this);
 
-	private @Getter ClassLoader configurationClassLoader = Thread.currentThread().getContextClassLoader();
+	private final @Getter ClassLoader configurationClassLoader = Thread.currentThread().getContextClassLoader();
 	private @Getter @Setter String name;
 	private @Getter @Setter ApplicationContext applicationContext;
 
@@ -214,8 +213,8 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 	private boolean disableCookies = false;
 
 	private CredentialFactory credentials;
-	private CredentialFactory user_cf;
-	private CredentialFactory client_cf;
+	private CredentialFactory userCf;
+	private CredentialFactory clientCf;
 
 	/**
 	 * Makes sure only http(s) requests can be performed.
@@ -234,15 +233,13 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 			uri.setPath("/");
 		}
 
-		log.info("created uri: scheme=["+uri.getScheme()+"] host=["+uri.getHost()+"] path=["+uri.getPath()+"]");
+		log.info("created uri: scheme=[{}] host=[{}] path=[{}]", uri.getScheme(), uri.getHost(), uri.getPath());
 		return uri.build();
 	}
 
 	@Override
 	public void configure() throws ConfigurationException {
-		/**
-		 * TODO find out if this really breaks proxy authentication or not.
-		 */
+		// TODO find out if this really breaks proxy authentication or not.
 		defaultHttpClientContext = HttpClientContext.create(); //Only create a new HttpContext when configure is called (which doesn't happen when using a SharedResource)
 //		httpClientBuilder.disableAuthCaching();
 
@@ -255,12 +252,12 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 		AuthSSLContextFactory.verifyKeystoreConfiguration(this, this);
 
 		if (StringUtils.isNotEmpty(getAuthAlias()) || StringUtils.isNotEmpty(getUsername())) {
-			user_cf = new CredentialFactory(getAuthAlias(), getUsername(), getPassword());
-			credentials = user_cf;
+			userCf = new CredentialFactory(getAuthAlias(), getUsername(), getPassword());
+			credentials = userCf;
 		}
-		client_cf = new CredentialFactory(getClientAuthAlias(), getClientId(), getClientSecret());
+		clientCf = new CredentialFactory(getClientAuthAlias(), getClientId(), getClientSecret());
 		if (credentials==null) {
-			credentials = client_cf;
+			credentials = clientCf;
 		}
 		if (StringUtils.isNotEmpty(getTokenEndpoint()) && StringUtils.isEmpty(getClientAuthAlias()) && StringUtils.isEmpty(getClientId())) {
 			throw new ConfigurationException("To obtain accessToken at tokenEndpoint ["+getTokenEndpoint()+"] a clientAuthAlias or ClientId and ClientSecret must be specified");
@@ -294,7 +291,7 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 		if(areCookiesDisabled()) {
 			httpClientBuilder.disableCookieManagement();
 		}
-		httpClientBuilder.evictIdleConnections((long) getConnectionIdleTimeout(), TimeUnit.SECONDS);
+		httpClientBuilder.evictIdleConnections(getConnectionIdleTimeout(), TimeUnit.SECONDS);
 
 		sslSocketFactory = getSSLConnectionSocketFactory(); //Configure it here, so we can handle exceptions
 
@@ -414,20 +411,18 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 			credentialsProvider.setCredentials(new AuthScope(AuthScope.ANY_HOST, AuthScope.ANY_PORT), getCredentials());
 
 			AuthenticationScheme preferredAuthenticationScheme = getPreferredAuthenticationScheme();
-			requestConfigBuilder.setTargetPreferredAuthSchemes(Arrays.asList(preferredAuthenticationScheme.getSchemeName()));
+			requestConfigBuilder.setTargetPreferredAuthSchemes(Collections.singletonList(preferredAuthenticationScheme.getSchemeName()));
 			requestConfigBuilder.setAuthenticationEnabled(true);
 
 			if (preferredAuthenticationScheme == AuthenticationScheme.OAUTH) {
 				AuthenticationType authType = isAuthenticatedTokenRequest() ? AuthenticationType.AUTHENTICATION_HEADER : AuthenticationType.REQUEST_PARAMETER;
-				OAuthAccessTokenManager accessTokenManager = new OAuthAccessTokenManager(getTokenEndpoint(), getScope(), client_cf, user_cf==null, authType, this, getTokenExpiry());
+				OAuthAccessTokenManager accessTokenManager = new OAuthAccessTokenManager(getTokenEndpoint(), getScope(), clientCf, userCf == null, authType, this, getTokenExpiry());
 				defaultHttpClientContext.setAttribute(OAuthAuthenticationScheme.ACCESSTOKEN_MANAGER_KEY, accessTokenManager);
 				httpClientBuilder.setTargetAuthenticationStrategy(new OAuthPreferringAuthenticationStrategy());
 			}
 		}
 		if (proxy!=null) {
 			AuthScope authScope = new AuthScope(proxy, proxyRealm, AuthScope.ANY_SCHEME);
-
-
 			if (StringUtils.isNotEmpty(proxyCredentials.getUsername())) {
 				Credentials httpCredentials = new UsernamePasswordCredentials(proxyCredentials.getUsername(), proxyCredentials.getPassword());
 				credentialsProvider.setCredentials(authScope, httpCredentials);
@@ -435,7 +430,7 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 			log.trace("setting credentialProvider [{}]", credentialsProvider);
 
 			if(isPrefillProxyAuthCache()) {
-				requestConfigBuilder.setProxyPreferredAuthSchemes(Arrays.asList(AuthSchemes.BASIC));
+				requestConfigBuilder.setProxyPreferredAuthSchemes(List.of(AuthSchemes.BASIC));
 
 				AuthCache authCache = defaultHttpClientContext.getAuthCache();
 				if(authCache == null)
@@ -491,8 +486,8 @@ public abstract class HttpSessionBase implements ConfigurableLifecycle, HasKeyst
 		}
 
 		try {
-			javax.net.ssl.SSLSocketFactory socketfactory = AuthSSLContextFactory.createSSLSocketFactory(this, this, protocol);
-			sslConnectionSocketFactory = new SSLConnectionSocketFactory(socketfactory, supportedProtocols, cipherSuites, hostnameVerifier);
+			javax.net.ssl.SSLSocketFactory socketFactory = AuthSSLContextFactory.createSSLSocketFactory(this, this, protocol);
+			sslConnectionSocketFactory = new SSLConnectionSocketFactory(socketFactory, supportedProtocols, cipherSuites, hostnameVerifier);
 		} catch (Exception e) {
 			throw new ConfigurationException("cannot create or initialize SocketFactory", e);
 		}
